# Gale

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Gale.toml  LICENSE-APACHE  LICENSE-MIT  README.md  STRUCTURE.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.opencode/plans/: phase8-2-remaining-fixes.md  phase8-3-diagnostics.md  phase8-4-testing.md  phase8-galex-lexer.md
benches/: throughput.rs
benchmarks/: README.md  compare-nginx.sh  run.ps1  run.sh
deploy/: gale.service
docs/: galex.toml
docs/app/: layout.gx  page.gx
docs/app/api/: page.gx
docs/app/guides/auth/: page.gx
docs/app/guides/database/: page.gx
docs/app/guides/deploying/: page.gx
docs/app/guides/forms/: page.gx
docs/app/guides/migration/: page.gx
docs/app/guides/realtime/: page.gx
docs/app/reference/: page.gx
examples/blog/: README.md  galex.toml
examples/blog/app/: layout.gx  page.gx
examples/chat/: README.md  galex.toml
examples/chat/app/: page.gx
examples/dashboard/: README.md  galex.toml
examples/dashboard/app/: layout.gx  page.gx
examples/dashboard/app/settings/: page.gx
examples/dashboard/app/users/: page.gx
examples/ecommerce/: README.md  galex.toml
examples/ecommerce/app/: layout.gx  page.gx
examples/ecommerce/app/cart/: page.gx
examples/ecommerce/app/product/: page.gx
examples/test_app/: galex.toml
examples/test_app/app/: layout.gx  page.gx
examples/test_app/app/about/: page.gx
examples/todo/: README.md  galex.toml
examples/todo/app/: layout.gx  page.gx
gale-registry/: Cargo.toml
gale-registry/migrations/: 001_init.sql
gale-registry/src/: db.rs  main.rs
galex/: Cargo.toml
galex/benches/: lexer_bench.rs  typechecker_bench.rs
galex/editors/vscode/: .vscodeignore  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json
galex/editors/vscode/snippets/: gale.json
galex/editors/vscode/src/: extension.ts
galex/editors/vscode/syntaxes/: gale.tmLanguage.json
galex/editors/zed/: Cargo.toml  README.md  extension.toml  extension.wasm  install-zed.ps1  install-zed.sh
galex/editors/zed/languages/gale/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  injections.scm  outlines.scm  overrides.scm
galex/editors/zed/src/: lib.rs
galex/src/: ast.rs  compiler.rs  config.rs  diagnostic.rs  error.rs  lib.rs  main.rs  main_lsp.rs  span.rs  token.rs
galex/src/checker/: action.rs  boundary.rs  decl.rs  dom.rs  env.rs  expr.rs  form.rs  guard.rs  head.rs  imports.rs  middleware.rs  mod.rs  ops.rs  reactivity.rs  stmt.rs  store.rs  template.rs
galex/src/codegen/: asset_hash.rs  bundle.rs  emit_action.rs  emit_api.rs  emit_channel.rs  emit_channel_js.rs  emit_client.rs  emit_client_actions.rs  emit_client_runtime.rs  emit_env.rs  emit_expr.rs  emit_form_js.rs  emit_guard.rs  emit_guard_js.rs  emit_middleware.rs  emit_query_js.rs  emit_router_js.rs  emit_shared.rs  emit_stmt.rs  emit_store_js.rs  emit_transitions_css.rs  expr.rs  head.rs  hydration.rs  js_emitter.rs  js_expr.rs  layout.rs  minify.rs  mod.rs  project.rs  route.rs  rust_emitter.rs  ssr.rs  types.rs  validation.rs
galex/src/commands/: add.rs  check.rs  editor.rs  fmt.rs  lint_cmd.rs  login.rs  migrate.rs  mod.rs  new.rs  publish.rs  remove.rs  scaffold.rs  search.rs  self_update.rs  test.rs  test_runner.rs  update.rs
galex/src/dev/: mod.rs  overlay.css  overlay.js  rebuild.rs  runtime_errors.rs  server.rs  watcher.rs
galex/src/errors/: codes.rs  mod.rs
galex/src/fmt/: mod.rs  printer.rs
galex/src/lexer/: code.rs  cursor.rs  mod.rs  number.rs  regex.rs  string.rs  template.rs
galex/src/lint/: mod.rs  rules.rs
galex/src/lsp/: completions.rs  diagnostics.rs  document.rs  goto.rs  hover.rs  mod.rs  position.rs  quickfix.rs  semantic_tokens.rs  symbols.rs
galex/src/minify/: css.rs  js.rs  mod.rs  rust.rs
galex/src/parser/: decl.rs  error.rs  expr.rs  mod.rs  stmt.rs  template.rs
galex/src/registry/: client.rs  lockfile.rs  mod.rs  package.rs  resolve.rs  tarball.rs  validation.rs
galex/src/router/: discovery.rs  mod.rs  validation.rs
galex/src/runtime/: gale_runtime.js
galex/src/tailwind/: config.rs  extract.rs  generate.rs  mod.rs
galex/src/types/: constraint.rs  env.rs  mod.rs  ty.rs  validation.rs
galex/tests/: checker.rs  codegen_api.rs  codegen_client.rs  codegen_client_actions.rs  codegen_env.rs  codegen_guard_js.rs  codegen_hydration.rs  codegen_middleware.rs  codegen_ssr.rs  codegen_store_js.rs  comments.rs  compile_test.rs  diagnostics.rs  fuzz.rs  integration.rs  keywords.rs  literals.rs  operators.rs  snapshot_codegen.rs  spans.rs  templates.rs  types.rs
galex/tests/snapshots/: snapshot_codegen__action_plain_params.snap  snapshot_codegen__action_with_guard.snap  snapshot_codegen__api_resource.snap  snapshot_codegen__cargo_toml_with_regex.snap  snapshot_codegen__cargo_toml_without_regex.snap  snapshot_codegen__channel_bidirectional.snap  snapshot_codegen__channel_server_to_client.snap  snapshot_codegen__guard_simple.snap  snapshot_codegen__guard_with_validators.snap  snapshot_codegen__layout_default.snap  snapshot_codegen__main_rs_full_project.snap  snapshot_codegen__route_dynamic.snap  snapshot_codegen__route_static.snap  snapshot_codegen__ssr_runtime.snap  snapshot_codegen__validation_module.snap
public/: index.html
sandbox/temp/: .gitignore  galex.toml  package-lock.json  package.json
sandbox/temp/app/: page.gx
sandbox/temp/app/server/: page.gx
sandbox/temp/styles/: global.css
sandbox/test/: galex.toml  package-lock.json  package.json
sandbox/test/app/: page.gx
sandbox/test/app/about/: page.gx
src/: cache.rs  compression.rs  config.rs  error.rs  http.rs  lib.rs  logging.rs  main.rs  mime_types.rs  platform.rs  rate_limit.rs  server.rs  static_files.rs  tls.rs
src/security/: headers.rs  limits.rs  mod.rs  path.rs
tests/: security.rs
tree-sitter-gale/: grammar.js  package.json
tree-sitter-gale/queries/: highlights.scm
web/: index.html  package.json
web/public/: install.ps1  install.sh
web/src/: App.tsx  content.tsx  index.css
(+46 files in other folders)
