[workspace]
members = ["galex", "gale-registry"]

[package]
name = "gale"
version = "0.1.5"
edition = "2021"
description = "A fast, minimal, and secure static web server"
license = "MIT/Apache-2.0"
repository = ""
keywords = ["web-server", "static", "http", "performance"]
categories = ["web-programming::http-server"]

[lib]
name = "gale_lib"
path = "src/lib.rs"

[[bin]]
name = "gale"
path = "src/main.rs"

[dependencies]
# Core
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = [
    "fs",            # ServeDir for static files
    "compression-br", # Brotli (Phase 3)
    "compression-gzip", # Gzip (Phase 3)
    "set-header",    # Security headers (Phase 2)
    "trace",         # Request tracing (Phase 5)
    "cors",          # CORS middleware (Phase 5)
] }

tower-service = "0.3"    # Service trait for custom 404 handler
percent-encoding = "2"   # URL decoding for path security

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"

# ACME (Let's Encrypt)
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "tokio", "webpki-roots"] }
futures-util = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
