[workspace]
members = ["galex", "gale-registry"]

[package]
name = "gale"
version = "0.2.18"
edition = "2021"
description = "A fast, minimal, and secure static web server"
license = "MIT/Apache-2.0"
repository = ""
keywords = ["web-server", "static", "http", "performance"]
categories = ["web-programming::http-server"]

[lib]
name = "gale_lib"
path = "src/lib.rs"

[[bin]]
name = "gale"
path = "src/main.rs"

[features]
default = ["tls", "compression", "mimalloc"]
tls = ["dep:axum-server", "dep:rustls", "dep:rustls-pemfile", "dep:rustls-acme", "dep:futures-util"]
compression = ["tower-http/compression-br", "tower-http/compression-gzip"]
mimalloc = ["dep:mimalloc"]
http = ["dep:reqwest"]

[dependencies]
# Core
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "io-util", "fs", "time"] }
tower-http = { version = "0.6", features = [
    "fs",            # ServeDir for static files
    "set-header",    # Security headers (Phase 2)
    "trace",         # Request tracing (Phase 5)
    "cors",          # CORS middleware (Phase 5)
    # compression-br and compression-gzip are gated behind the "compression" feature
] }

tower-service = "0.3"    # Service trait for custom 404 handler
percent-encoding = "2"   # URL decoding for path security
mimalloc = { version = "0.1", default-features = false, optional = true } # 5-15% throughput improvement
dashmap = "6"            # Lock-free concurrent HashMap for rate limiter + path cache
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TLS (optional — disabled for dev builds to cut ~60s of compile time)
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }

# ACME (Let's Encrypt) — also behind the tls feature
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "tokio", "webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[profile.dev]
opt-level = 0
debug = 1              # line tables only — faster than full debug info
incremental = true

[profile.dev.package."*"]
opt-level = 2          # optimize dependencies (cached after first build)

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
